[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Textures/PuzzleHook.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/MashBash/LinePuzzle.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 28 )

[node name="LinePuzzle" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -32 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 5.333, 5.333 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_LinePuzzle_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_LinePuzzle_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
